[package]
name = "klocc"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokei = "12.1.2"
tempdir = "0.3"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = { version = "0.6.0", default-features = false }
prometheus = { version = "0.13.0", features = ["nightly"] }
lazy_static = "1.4.0"
