[package]
name = "klocc"
version = "0.1.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokei = "14.0.0"
tempfile = "3.27.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = { version = "0.6.0", default-features = false }
prometheus = { version = "0.14.0", default-features = false }
lazy_static = "1.5.0"
